# clip-loop

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
clip_loop/: __init__.py  __main__.py  _test_fixtures.py  cli.py  click_types.py  crop.py  errors.py  exceptions.py  ffmpeg.py  file_dialog.py  last_run.py  media.py  models.py  options.py  parsing.py  pipeline.py  segment_argv.py  service.py  tui.py  validation.py
clip_loop/ffmpeg/: __init__.py  audio.py  audio_pipeline.py  executor.py  looping.py  probe.py  temp.py  video.py
clip_loop/tui/: __init__.py  app.py  constants.py  fields.py  form.py  handlers.py  layout.py  run_controller.py  run_progress.py  screens.py  segments.py  validator.py
clip_loop/tui/constants/: __init__.py  field_mapping.py  presets.py  styling.py  widget_ids.py
clip_loop/tui/widgets/: __init__.py  audio_input_section.py  audio_options_fields.py  audio_segment_row.py  collapsible_segment_row.py  crop_fields.py  duration_fields.py  field_label.py  field_row.py  file_pick_screen.py  form_group_box.py  ms_preset_field.py  multiple_audio_input_panel.py  multiple_video_input_panel.py  output_path_fields.py  path_browse_row.py  (+11 more)
clip_repeat/: __init__.py  __main__.py  cli.py
scripts/: generate_test_fixtures.sh
tests/: conftest.py  test_cli.py  test_errors.py  test_ffmpeg.py  test_field_mapping.py  test_file_dialog.py  test_imports.py  test_last_run.py  test_media.py  test_options.py  test_parsing.py  test_pipeline.py  test_segment_argv.py  test_tui_fields.py  test_tui_form.py  test_tui_segments.py  test_validation.py
