[project]
name = "clip-loop"
version = "0.1.0"
description = "Loop a video clip to a target duration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tui = ["textual>=0.80.0"]

[project.scripts]
clip-loop = "clip_loop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
