[project]
name = "clip-loop"
version = "0.1.0"
description = "Loop a video clip to a target duration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.4.1",
]

[project.optional-dependencies]
tui = [
    "textual>=0.80.0",
    "trogon>=0.6.0",
]

[project.scripts]
clip-loop = "clip_loop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
